--- a/index.css
+++ b/index.css
@@ -1,13 +1,52 @@
-/*
-COLOR PALETTE
+/* font-family: 'Poppins', sans-serif; */
 
-BLACK: #201A23
-WHITE: #FBFBFB
-DARK: #44354A
-COLOR: #9E4770
-*/
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700;800&display=swap");
 
-html, body {
-    margin: 0;
-    padding: 0;
+:root {
+  --black: #201a23;
+  --white: #fbfbfb;
+  --dark: #44354a;
+  --maroon: #9e4770;
+}
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+  font-family: "Poppins", sans-serif;
+}
+
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+#root,
+#__next {
+  isolation: isolate;
 }
