--- a/index.css
+++ b/index.css
@@ -20,32 +20,39 @@
 }
 
 body {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  background-color: var(--dark);
 }
-img,
-picture,
-video,
-canvas,
-svg {
-  display: block;
-  max-width: 100%;
+
+.container {
+  background-color: var(--black);
+  width: 90vw;
+  color: var(--white);
 }
-input,
-button,
-textarea,
-select {
-  font: inherit;
+header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  overflow-wrap: break-word;
+img {
+    width: 30vw;
+    border-radius: 50%;
+    border: 0.5em solid var(--dark)
 }
+button {
+    padding: 0.5em 2em;
+    border: none;
+    border-radius: 0.5em;
+    background-color: var(--maroon);
+    font-size: 2rem;
+}
+
 #root,
 #__next {
   isolation: isolate;
