--- a/index.css
+++ b/index.css
@@ -39,11 +39,15 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 2em;
+}
+h1 {
+    font-size: 3rem;
 }
 img {
     width: 30vw;
     border-radius: 50%;
-    border: 0.5em solid var(--dark)
+    border: 0.75em solid var(--dark)
 }
 button {
     padding: 0.5em 2em;
