--- a/index.css
+++ b/index.css
@@ -55,7 +55,41 @@ button {
   border: none;
   border-radius: 0.5em;
   background-color: var(--maroon);
-  font-size: 2rem;
+  font-size: 1.5rem;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 2em;
+    gap: 1em;
+}
+
+.dollar-amounts {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+ h2 {
+    text-align: center;
+    font-size: 1rem;
+ }
+
+.emoji-field {
+    width: 70vw;
+    height: 2.5em;
+    border-radius: 1.5em;
+    background-color: var(--dark);
+}
+
+.dollar-field {
+    width: 30vw;
+    padding: 0.5em 0.75em;
+    border-radius: 1.5em;
+    text-align: center;
+    font-weight: bold;
+    background-color: var(--dark);
 }
 
 #root,
