--- a/index.css
+++ b/index.css
@@ -10,4 +10,12 @@ COLOR: #9E4770
 html, body {
     margin: 0;
     padding: 0;
+    font-size: 10px;
+    background: #201A23;
+    color: #FBFBFB;
 } 
+
+.salesboard {
+    font-size: 4.8rem;
+    font-family: 'Poppins';
+}
