--- a/index.css
+++ b/index.css
@@ -10,12 +10,56 @@ COLOR: #9E4770
 html, body {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     font-size: 10px;
     background: #201A23;
+    font-family: 'Poppins';
     color: #FBFBFB;
 } 
 
 .salesboard {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    text-align: center;
+    width: 50vw;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.salesboard-title {
     font-size: 4.8rem;
-    font-family: 'Poppins';
+    margin-bottom: 2rem;
+}
+
+.salesboard-picture {
+    border: 1rem solid #44354A;
+    border-radius: 14.5rem;
+    width: 21.9rem;
+    margin-bottom: 4.5rem;
+}
+
+#btn-productA,
+#btn-productB {
+    width: 20rem;
+    height: 8rem;
+    background: #9E4770;
+    border-radius: 1rem;
+}
+
+.title {
+    font-size: 3rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 45px;
+}
+
+.bar {
+    background: #44354A;
+    border-radius: 5rem;
 }
