--- a/index.css
+++ b/index.css
@@ -9,75 +9,79 @@ DARK: #44354A
 COLOR: #9E4770
 */
 
-body{
-    text-align: center;
-    background-color: #201A23;
-    color: #FBFBFB;
-    font-family: 'Poppins', sans-serif;
-    box-sizing: border-box;
+body {
+  text-align: center;
+  background-color: #201a23;
+  color: #fbfbfb;
+  font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
 }
-.container{
-    border:3px solid white;
+.container {
+  border: 3px solid white;
 }
-h1{
-    font-size: 48px;
-    line-height: 72px;
-    margin-bottom: 0px;
-    margin-top: 46px;
+h1 {
+  font-size: 48px;
+  line-height: 72px;
+  margin-bottom: 0px;
+  margin-top: 46px;
 }
-h3{
-    font-size: 30px;
-    line-height: 45px;
-    margin-bottom: 0px;
+h3 {
+  font-size: 30px;
+  line-height: 45px;
+  margin-bottom: 0px;
 }
-h1:hover,  h3:hover, button:hover{
-    text-decoration: underline solid #38BDF8;
-
+h1:hover,
+h3:hover,
+button:hover {
+  text-decoration: underline solid #38bdf8;
 }
-.person-img{
-    border:10px solid #44354A;
-    border-radius: 50%;
-    width: 219px;
-    height: 219px;
-}
-
-button{
-    width: 188px;
-    height: 80px;
-    background-color: #9E4770;
-    border-radius: 10px;
-    line-height: 54px;
-    font-size: 45px;
-}
-.product-buttons{
-    display: flex;
-    justify-content: center;
-    column-gap: 14px;
-    margin-top: 45px;
-}
-.highlight:hover{
-    border:10px solid #38BDF8;
-}
-.points-box{
-    width: 805px;
-    height: 67px;
-    background-color: #44354A;
-    border-radius: 50px;
-    border:1px solid #44354A;
-    margin: 0px auto;
-}
-.total{
-    display:flex;
-    justify-content: center;
-    column-gap: 16px;
-    margin-bottom: 70px;
-}
-.total-box{
-    width: 389px;
-    height: 86px;
-    background-color: #44354A;
-    border-radius: 50px;
-    border:1px solid #44354A;
-    margin: 0px auto;
+.person-img {
+  border: 10px solid #44354a;
+  border-radius: 50%;
+  width: 219px;
+  height: 219px;
 }
 
+button {
+  width: 188px;
+  height: 80px;
+  background-color: #9e4770;
+  border-radius: 10px;
+  line-height: 54px;
+  font-size: 45px;
+}
+.product-buttons {
+  display: flex;
+  justify-content: center;
+  column-gap: 14px;
+  margin-top: 45px;
+}
+.highlight:hover {
+  border: 10px solid #38bdf8;
+}
+.points-box {
+  width: 805px;
+  height: 67px;
+  background-color: #44354a;
+  border-radius: 50px;
+  border: 1px solid #44354a;
+  margin: 0px auto;
+  font-size: 37px;
+  display: flex;
+  align-items: start;
+  padding: 5px;
+}
+.total {
+  display: flex;
+  justify-content: center;
+  column-gap: 16px;
+  margin-bottom: 70px;
+}
+.total-box {
+  width: 389px;
+  height: 86px;
+  background-color: #44354a;
+  border-radius: 50px;
+  border: 1px solid #44354a;
+  margin: 0px auto;
+}
