--- a/index.css
+++ b/index.css
@@ -5,6 +5,10 @@ BLACK: #201A23
 WHITE: #FBFBFB
 DARK: #44354A
 COLOR: #9E4770
+
+LIGHT MODE
+BLACK: ##ddd6e0
+LIGHT: #bfafc6
 */
 
 
@@ -13,16 +17,16 @@ html, body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background: #201A23;
     font-family: 'Poppins', sans-serif; 
     color: #FBFBFB;
+    background: #201A23;
 } 
 
 .salesboard {
-   text-align: center;
-   max-width: 940px;
-   margin: 0 auto;
-   padding: 0 15rem;
+    text-align: center;
+    max-width: 940px;
+    margin: 0 auto;
+    padding: 0 15rem;
 }
 
 img {
@@ -76,7 +80,6 @@ h3 {
 .total-revenue,
 .total-commission {
     width: 100%;
-    
 }
 
 .revenue-bar,
@@ -85,4 +88,22 @@ h3 {
     border-radius: 5rem;
     line-height: 2;
     font-size: 2.5rem;
+}
+
+.light {
+    background-color: #bfafc6;
+}
+
+.toggle-mode {
+    position: fixed;
+    top: 2rem;
+    right: 20rem;
+    width: 1rem;
+    height: 1rem;
+    background: #44354A;
+    color: #FBFBFB;
+    padding: 0.5rem;
+    border-radius: 50%;
+    cursor: pointer;
+    font-size: 3rem;
 }
