--- a/index.css
+++ b/index.css
@@ -21,26 +21,26 @@ body {
 
 .salesboard {
     text-align: center;
-    max-width: 940px;
+    max-width: 58.75rem;
     margin: 0 auto;
     padding: 0 15rem;
 }
 
 img {
-    border: 10px solid #44354A;
+    border: 0.625rem solid #44354A;
     border-radius: 50%;
-    width: 220px;
-    margin-bottom: 25px;
+    width: 13.75rem;
+    margin-bottom: 1.5rem;
 }
 
 /*Buttons*/
 button {
     background: #9E4770;
-    height: 80px;
-    width: 190px;
-    font-size: 45px;
+    height: 5rem;
+    width: 11.875rem;
+    font-size: 2.812rem;
     border: 0;
-    border-radius: 10px;
+    border-radius: 0.625rem;
     cursor: pointer;
 }
 
@@ -70,7 +70,7 @@ h1{
 
 h3 {
     font-size: 1.5rem;
-    margin-bottom: 5px;
+    margin-bottom: .3125rem;
 }
 
 /*Containers*/
@@ -85,7 +85,7 @@ h3 {
 #sales-bar,
 #achievements-bar {
     text-align: left;
-    padding: 5px 1.5rem;
+    padding: .3125rem 1.5rem;
 }
 
 .product-btn-container,
@@ -124,7 +124,7 @@ body.light {
 }
 
 body.light img {
-    border: 10px solid #977ca4;
+    border: .625rem solid #977ca4;
 }
 
 body.light button {
